chore: add recyclerview lista de compras

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppFirebase</string>
+    <string name="lista_1">Lista 1</string>
+    <string name="lista1">Lista 1</string>
 </resources>
