--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ListaSolidaria</string>
+    <string name="app_name">Listão Do Racha</string>
     <string name="lista_1">Lista 1</string>
     <string name="lista1">Lista 1</string>
 
